# zigup

./: Cargo.toml
src/: cache.rs  cmd.rs  config.rs  main.rs
src/cmd/: check.rs  update.rs  versions.rs
src/commands/: check.rs  mod.rs  update.rs
tests/: check.sh  download.sh  index.json  update.sh
